5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4359/executions/1613_1800.log
== TEST (2019-04-11 18:43:26) 
-- CODE:
1**2 + 2**2 + 3**2
print (round (x,n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (round (x,n))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:43:36) 
-- CODE:
round = 1**2 + 2**2 + 3**2
print (round (x,n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (round (x,n))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:43:47) 
-- CODE:
round = 1**2 + 2**2 + 3**2
print (round (x,n, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (round (x,n, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:43:54) 
-- CODE:
round = 1**2 + 2**2 + 3**2
print (round (x,n, ))
-- EXECUTION TIME:
0.196679
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1800/main.py", line 2, in <module>
    print (round (x,n, ))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:43:57) 
-- CODE:
round = 1**2 + 2**2 + 3**2
print (round (x,n, z))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (round (x,n, z))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:44:02) 
-- CODE:
round = 1**2 + 2**2 + 3**2
print (round (x, n, z))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (round (x, n, z))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:48:57) 
-- CODE:
1**2 
2**2 
3**2
print (round (x, n0)
-- ERROR:
File "XXXX", line 5
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:49:06) 
-- CODE:
1**2 
2**2 
3**2
print (round(x, n0)
-- ERROR:
File "XXXX", line 5
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:49:12) 
-- CODE:
1**2 
2**2 
3**2
print (round(x, n)
-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:49:18) 
-- CODE:
1**2 
2**2 
3**2
print(round(x, n)
-- ERROR:
File "XXXX", line 5
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:45:31) 
-- CODE:
a = 1**2 
a = 2**2 
a = 3**2
print(round(x, n)
-- ERROR:
File "XXXX", line 5
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:45:40) 
-- CODE:
a = 1**2 
a = 2**2 
a = 3**2
print(round(x, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(x, n))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:46:50) 
-- CODE:
a = 1**2 
b = 2**2 
c = 3**2
print(int(abs(max(a, b, c))))
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:46:53) 
-- CODE:
a = 1**2 
b = 2**2 
c = 3**2
print(int(abs(max(a, b, c))))
-- EXECUTION TIME:
0.18338
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
9
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
9
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:47:03) 
-- CODE:
a = 1**2 
b = 2**2 
c = 3**2
print(int(abs(max(a, b, c))))
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:48:21) 
-- CODE:
a = 1 
b = 2
c = 3
print(int(abs(max(a, b, c))))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:48:23) 
-- CODE:
a = 1 
b = 2
c = 3
print(int(abs(max(a, b, c))))
-- EXECUTION TIME:
0.195626
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
3
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
3
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:49:49) 
-- CODE:
a = 1 
b = 2
c = 3
print(int(abs(max(a, b, c))))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:50:06) 
-- CODE:
a = 1 
b = 2
c = 3
print(int(a, b, c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(int(a, b, c))
TypeError: int() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:50:22) 
-- CODE:
a = 1 
b = 2
c = 3
print(round(a, b, c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(a, b, c))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:51:34) 
-- CODE:
a + b + c
print(round(a, b, c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a + b + c
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:51:52) 
-- CODE:
x = a + b + c
print(round(a, b, c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = a + b + c
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:53:21) 
-- CODE:
a = 1
b = 2 
c = 3
print(round(a, b, c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(a, b, c))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:53:43) 
-- CODE:
a = 1
b = 2 
c = 3
print(round(x, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(x, 3))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:54:16) 
-- CODE:
x = 1 + 2 + 3
print(round(x, 3))
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:54:20) 
-- CODE:
x = 1 + 2 + 3
print(round(x, 3))
-- EXECUTION TIME:
0.137909
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
6
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
6
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:14:01) 
-- CODE:
x = 1  2 + 3
print(round(x, 3))
-- ERROR:
File "XXXX", line 1
    x = 1  2 + 3
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
